<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#ccaabb" >

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/folderIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/folder_button_title"
                android:src="@drawable/ic_lapse_folder" />

            <ImageView
                android:id="@+id/fpsIV"
                android:contentDescription="@string/lapse_rate_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fps" />

            <ImageView
                android:id="@+id/durationIV"
                android:contentDescription="@string/duration_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_duration" />

            <ImageView
                android:id="@+id/delayIV"
                android:contentDescription="@string/delay_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delay" />

            <ImageView
                android:id="@+id/flashIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flash_modes_dialog_title"
                android:src="@drawable/ic_flash" />

            <ImageView
                android:id="@+id/colorEffectsIV"
                android:contentDescription="@string/color_effects_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_color_effects" />

            <ImageView
                android:id="@+id/videoSizeIV"
                android:contentDescription="@string/video_sizes_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video_size" />

            <ImageView
                android:id="@+id/whiteBalanceIV"
                android:contentDescription="@string/white_balance_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_white_balance" />

            <ImageView
                android:id="@+id/focusModeIV"
                android:contentDescription="@string/focus_mode_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_focus_mode" />

            <ImageView
                android:id="@+id/isoIV"
                android:contentDescription="@string/iso_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_iso" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>